<resources>
    <string name="app_name">RunningSchool</string>
    <string name="skip">跳过(%1$ds)</string>
    <string name="register_phone_number">手机号</string>
    <string name="register_auth_code">验证码</string>
    <string name="register_password">密码</string>
    <string name="action_register">注册</string>
    <string name="register_nickname">昵称</string>
    <string name="login_phone">手机号码</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">该手机号码不正确</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处不应为空</string>
    <string name="permission_rationale">"需要完整的手机号码"</string>
    <string name="nick_name">昵称</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="reset_password">请输入您的密码</string>
    <string name="action_reset">重新设定密码</string>
</resources>
